2011-04-13  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        GC allocate Structure
        https://bugs.webkit.org/show_bug.cgi?id=58483

        Update WK2 for the world of GC allocated Structure

        * WebProcess/Plugins/Netscape/JSNPMethod.h:
        (WebKit::JSNPMethod::createStructure):
        * WebProcess/Plugins/Netscape/JSNPObject.h:
        (WebKit::JSNPObject::createStructure):

2011-04-13  Enrica Casucci  <enrica@apple.com>

        Reviewed by Dan Bernstein.

        Should not rely on WKEditableLinkBehavior being in synch
        with WebCore::EditableLinkBehavior.
        https://bugs.webkit.org/show_bug.cgi?id=58473

        Adding conversion routines.

        * UIProcess/API/C/WKAPICast.h:
        (WebKit::toAPI):
        (WebKit::toEditableLinkBehavior):
        * UIProcess/API/C/WKPreferences.cpp:
        (WKPreferencesSetEditableLinkBehavior):
        (WKPreferencesGetEditableLinkBehavior):

2011-04-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        After closing the last window, re-opening my last visited website is over 2X slower
        https://bugs.webkit.org/show_bug.cgi?id=58488
        <rdar://problem/9233518>

        Give the web process a 60 second termination timeout.

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::WebProcess):

2011-04-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        Convert WebProcess over to using disableTermination/enableTermination
        https://bugs.webkit.org/show_bug.cgi?id=58485

        * PluginProcess/PluginProcess.cpp:
        (WebKit::PluginProcess::getSitesWithData):
        (WebKit::PluginProcess::clearSiteData):
        Use the LocalTerminationDisabler RAII class.

        * Shared/ChildProcess.h:
        (WebKit::ChildProcess::LocalTerminationDisabler::LocalTerminationDisabler):
        (WebKit::ChildProcess::LocalTerminationDisabler::~LocalTerminationDisabler):